<resources>
    <string name="app_name">乐乐音乐</string>
    <string name="back_tip">再按一次返回桌面</string>
    <string name="exit_tip">程序出现异常,即将退出！</string>

    <string name="title_icon">&#xe8a3;</string>
    <string name="title_user">我的</string>
    <string name="title_recommend">排行</string>
    <string name="title_special">歌单</string>
    <string name="title_search">&#xe600;</string>

    <string name="def_text">乐乐音乐 就是任性</string>
    <string name="def_artist">乐乐音乐</string>
    <string name="def_songName">就是任性</string>
    <string name="copyright">copyright ©2015-2018 zhangliangming All Rights Reserved.</string>

    <string name="loadmore">点击加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="nomore">已经到底了</string>
    <string name="nodata">数据为空</string>

    <!-- tab my -->
    <string name="tab_localmusic">本地音乐</string>
    <string name="tab_like">喜欢</string>
    <string name="tab_download">下载</string>
    <string name="tab_centent">最近</string>
    <string name="tab_wifi">仅wifi联网</string>
    <string name="tab_wifi_img">&#xe8a0;</string>
    <string name="tab_desktoplrc">桌面歌词</string>
    <string name="tab_desktoplrc_img">&#xe89f;</string>
    <string name="tab_locklrc">锁屏歌词</string>
    <string name="tab_locklrc_img">&#xe884;</string>
    <string name="tab_hello">问候语</string>
    <string name="tab_hello_img">&#xe8a2;</string>
    <string name="tab_control">耳机线控</string>
    <string name="tab_control_img">&#xe8a1;</string>
    <string name="tab_close">退出程序</string>
    <string name="tab_close_img">&#xe812;</string>
    <string name="lrc_converter">歌词转换器</string>
    <string name="lrc_converter_img">&#xe75b;</string>
    <string name="make_lrc">歌词制作器</string>
    <string name="make_lrc_img">&#xe62e;</string>
    <string name="lrc_to_video">歌词图片生成器</string>
    <string name="lrc_to_video_img">&#xe646;</string>
    <string name="timer_power_off">定时关闭</string>
    <string name="timer_power_off_img">&#xe688;</string>


    <string name="no_net_img">&#xe62d;</string>
    <string name="loading_img">&#xe68e;</string>

    <string name="title_cancel">取消</string>
    <string name="clean_img">&#xe63f;</string>
    <string name="scan_img">&#xe640;</string>
    <string name="close_img">&#xe689;</string>


    //
    <string name="downloadpause_img">&#xe605;</string>
    <string name="downloading_img">&#xe6de;</string>
    <string name="detail_img">&#xe601;</string>
    <string name="delete_img">&#xe76b;</string>
    <string name="like_img">&#xe616;</string>
    <string name="liked_img">&#xe628;</string>
    <string name="more_img">&#xe602;</string>

    //文件返回上一级
    <string name="file_back">&#xe614;</string>
    <string name="file_name">&#xe65a;</string>
    <string name="file_directory">&#xe662;</string>

    //字体
    <string name="ziti_jia">&#xe6f9;</string>
    <string name="ziti_jian">&#xe6f6;</string>

    //播放模式
    <string name="mode_all">&#xe630;</string>
    <string name="mode_random">&#xe660;</string>
    <string name="mode_single">&#xe62f;</string>

    <string name="tab_voice_helper">语音助手</string>
    <string name="app_id">5e081d66</string>
    <string name="action_key_play">播放</string>
    <string name="action_key_pause">停</string>
    <string name="action_key_next">下一</string>
<<<<<<< HEAD
    <string name="action_key_previous">上一</string>
    <string name="action_key_volume_up">增大音量</string>
    <string name="action_key_volume_down">减小音量</string>

    <string name="action_key_local_open">打开本地</string>
    <string name="action_key_like_open">打开喜欢</string>
    <string name="action_key_download_open">打开下载</string>
    <string name="action_key_recent_open">打开最近</string>
    <string name="action_key_lrcActivity_open">打开歌词</string>

    <string name="action_key_back">返回</string>

    <string name="text_usage">
        使用说明\n
        无法在线播放歌曲，可在本地音乐中右上角导入。\n
        支持简单的语音使用,点击右侧悬浮按钮，说出指令即可。\n
        指令：\n
        播放 暂停 停止 下一曲 上一曲\n
        打开本地/喜欢/下载/最近/歌词页面 返回
    </string>
=======
    <string name="notification_voice_start">语音助手开始</string>
    <string name="notification_voice_finish">语音助手结束</string>
>>>>>>> parent of f9b06bf... 6.(1)增加了其他语音指令
</resources>
