<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/player_height"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tab_local_music"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/item_height"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3">

                        <ImageView

                            android:layout_width="@dimen/item_icon_imgSize"
                            android:layout_height="@dimen/item_icon_imgSize"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/my_localm" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/tab_localmusic"
                            android:textColor="@color/def_bar_title_color" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/local_music_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="0"
                            android:textColor="@color/def_bar_title_color" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout

                    android:id="@+id/tab_like_music"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/item_height"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3">

                        <ImageView

                            android:layout_width="@dimen/item_icon_imgSize"
                            android:layout_height="@dimen/item_icon_imgSize"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/my_like" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/tab_like"
                            android:textColor="@color/def_bar_title_color" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/like_music_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="0"
                            android:textColor="@color/def_bar_title_color" />

                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout

                    android:id="@+id/tab_download_music"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/item_height"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3">

                        <ImageView

                            android:layout_width="@dimen/item_icon_imgSize"
                            android:layout_height="@dimen/item_icon_imgSize"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/my_download" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/tab_download"
                            android:textColor="@color/def_bar_title_color" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/download_music_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="0"
                            android:textColor="@color/def_bar_title_color" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout

                    android:id="@+id/tab_centent_music"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/item_height"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3">

                        <ImageView

                            android:layout_width="@dimen/item_icon_imgSize"
                            android:layout_height="@dimen/item_icon_imgSize"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/my_recent" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/tab_centent"
                            android:textColor="@color/def_bar_title_color" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/recent_music_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="0"
                            android:textColor="@color/def_bar_title_color" />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#f3f3f3"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_height"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_usage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/bar_height"
                    android:layout_marginRight="@dimen/bar_height"
                    android:background="@drawable/textview_boader"
                    android:gravity="top|left"
                    android:hint="@string/text_usage"
                    android:textColor="@color/def_bar_title_color"
                    android:textSize="15sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#f3f3f3"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_height"
                android:layout_marginBottom="@dimen/player_height"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/bar_height"
                    android:layout_marginRight="@dimen/bar_height"
                    android:background="@drawable/textview_boader"
                    android:gravity="top|left"
                    android:hint="语音听写结果显示"
                    android:textColor="@color/def_bar_title_color"
                    android:textSize="20sp" />


            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>
